# arbitrary_solid_foreground_Shape_Fitting

./: ColorPalette.hpp  CurveObject.cpp  CurveObject.hpp  PointObject.cpp  PointObject.hpp  README.md  SegmentObject.cpp  SegmentObject.hpp  utils_base.hpp
ellipticizer/: CMakeLists.txt
ellipticizer/example/: CurveExtract.drawio  EllipticizerTest.cpp
eval/: addEvaluation.m  calculateContourMetrics.m  calculateEllipseMetrics.m  calculateShapeMetrics.m  createEnhancedVisualization.m  displayCoverage.m  displayCoverageByPixel.m  displayEllipses.m  displayImages.m  displayResults.m  displayResultsByCompare.m  generateEllipse.m  generateEllipseByParam.m  generateSimulatedData.m  getAIC_BIC.m  getBinarized.m  getBorderLabel.m  getEllipsesImage.m  getFilled.m  getObjectComplexity.m  runCompares.m  saveResults.m
